1.17 -> 2.0:
    - devzero2000: check secure_getenv for glibc 2.17 
      Use secure_getenv if it is available.
      Fall back to __secure_getenv if it is not.
      In glibc 2.17, __secure_getenv was renamed to secure_getenv.
      So check also for it.
      Reference:
       http://sourceware.org/glibc/wiki/Tips_and_Tricks/secure_getenv
       http://marc.info/?t=134192618500001&r=1&w=2
    - devzero2000: update the gettext version prereq
    - devzero2000: fix misspelling
      Fix misspelling using  http://github.com/lyda/misspell-check
    - devzero2000: quote AC_PREREQ in configure.ac
      for a old bug autoupdate don't do it before autoconf v2.66
      (http://lists.gnu.org/archive/html/autoconf-patches/2010-06/msg00014.html)
    - jbj: add sr.po (Translation Project).
    - devzero2000: fix compiler warning -Wunused-variable 
    - jbj: use words instead of jargon to increase portability 
    - jbj: macosx: needs $(INTLLIBS) explictly.
    - jbj: autofu: fix: MacPorts uses glibtool/gliboolize. test earlier.
    - jbj: i18n: msgmerge (Translation Project).
    - devzero2000: Enable many more gcc warnings for popt
      Inspired by http://www.spinics.net/lists/selinux/msg11726.html
      but popt can, unlike libselinux now, also detect if  
      gcc support a compiler flag or not 
    - devzero2000: Fix move popt.m4 to acinclude.m4
      so we can put it under version control
    - devzero2000: give some color to autogen.sh
      Certainly not so useful but not hurt either.
    - jbj: i18n: msgmerge (Translation Project).
    - devzero2000: redo commit 8396019 
      Useless to have format crap just for conforming
      to oddball platform 
      (http://rpm5.org/community/rpm-devel/5166.html).
      Keep the patch only inside MinGW.
    - devzero2000: merge commit fc8836e from git pull request  
      https://github.com/devzero2000/POPT/pull/2 
      "Fix more MSVC build warnings"
      by asenm (Matt Arsenault). This is the last commit